# Ecdysis

./: .codebase-structure.md  .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  PRD.md  axioms.md
crates/ephemeral/: Cargo.toml
crates/ephemeral/src/: lib.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: lib.rs
crates/firehose/: Cargo.toml
crates/firehose/src/: lib.rs
crates/fsm-runtime/: Cargo.toml
crates/fsm-runtime/src/: lib.rs
crates/incubator/: Cargo.toml
crates/incubator/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: main.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: lib.rs
crates/wasm-host/: Cargo.toml
crates/wasm-host/src/: lib.rs
