[package]
name = "kernel"
version = "0.0.1"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
firehose = { path = "../firehose" }
wasm-host = { path = "../wasm-host" }
ephemeral = { path = "../ephemeral" }
evolution = { path = "../evolution" }
incubator = { path = "../incubator" }
transpiler = { path = "../transpiler" }
cap = "0.1"
